<?xml version="1.0"?>
<package format="2">
  <name>services_quiz</name>
  <version>0.0.0</version>
  <description>Clean Services Quiz</description>
  <maintainer email="alex@tot.ro">Alex</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
